--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,6 @@ main: net.voidsweep.VoidSweep
 api-version: '1.16'
 authors: [Ilya Bush]
 description: A flexible plugin to keep your server clean.
+commands:
+  vs:
+    usage: /vs clear
