(3) commit-v0.0.1 | Added permission for auto-cleaning command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,3 +7,4 @@ description: A flexible plugin to keep your server clean.
 commands:
   vs:
     usage: /vs clear
+    permission: voidsweep.command.clear
