(4) commit-v0.0.1 | Added subcommands

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,4 +7,8 @@ description: A flexible plugin to keep your server clean.
 commands:
   vs:
     usage: /vs clear
-    permission: voidsweep.command.clear
+permissions:
+  voidsweep.command.clear:
+    default: op
+  voidsweep.command.reload:
+    default: op
