(6) commit-v0.0.1 | Updated processing of color messages

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ authors: [Ilya Bush]
 description: A flexible plugin to keep your server clean.
 commands:
   vs:
-    usage: /vs clear
+    usage: /vs <subcommand>
 permissions:
   voidsweep.command.clear:
     default: op
