(9) commit-v0.0.1 | Added automatic cleaning on/off feature

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,3 +12,7 @@ permissions:
     default: op
   voidsweep.command.reload:
     default: op
+  voidsweep.command.autoclean.on:
+    default: op
+  voidsweep.command.autoclean.off:
+    default: op
